# gatekeeper

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  apprc.yml  corund.cfg.yml  diesel.toml  docker-compose.yml  justfile
migrations/2024-08-23-150354_init/: down.sql  up.sql
src/: change.rs  common.rs  db.rs  domain.rs  err.rs  lib.rs  main.rs  password.rs  quco.rs  res.rs  schema.rs  sql.rs  token.rs  user.rs  user_change.rs
src/rskit/: asrt.rs  err.rs  mod.rs  path.rs  query.rs  res.rs  time.rs
src/ryz/: dict.rs  enm.rs  err.rs  mod.rs  res.rs  time.rs
tests/: client.rs  main.rs  server.rs
var/release/prod/psql/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
var/release/prod/psql/base/16384/: 2619
var/release/prod/psql/base/5/: 2619  pg_internal.init
var/release/prod/psql/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
var/release/prod/psql/pg_stat/: pgstat.stat
