[package]
name = "corund"
version = "0.1.0"
description = "Portable auth server."
edition = "2021"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
colog = "1.3.0"
diesel = { version = "2.2.2", features = ["postgres"] }
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
postgres = "0.19.8"
rouille = "3.6.2"
serde = "1.0.204"
serde_json = "1.0.121"
serde_with = { version = "3.9.0", features = ["json"] }
serde_yml = "0.0.11"
sha2 = "0.10.8"

