[package]
name = "corund"
version = "0.2.0"
description = "Portable auth server."
edition = "2021"
license = "MIT"

[lib]
name = "corund_lib"
path = "src/lib.rs"

[[bin]]
name = "corund_app"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["rand"] }
axum = "0.7.5"
bytes = "1.7.1"
colog = "1.3.0"
diesel = { version = "2.2.2", features = ["postgres"] }
hmac = "0.12.1"
http-body-util = "0.1.2"
jwt = "0.16.0"
lazy_static = "1.5.0"
log = "0.4.22"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = "1.0.204"
serde_json = "1.0.121"
serde_with = { version = "3.9.0", features = ["json"] }
serde_yml = "0.0.11"
sha2 = "0.10.8"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["catch-panic", "cors"] }

[dev-dependencies]
axum-test = "15.6.0"

